fix: wrap buttons in sub-header

--- a/src/modules/_header.scss
+++ b/src/modules/_header.scss
@@ -67,6 +67,7 @@ section.page-header {
     @media (min-width: 600px) {
       flex-direction: row;
       align-items: center;
+      flex-wrap: wrap;
     }
 
     gap: 0.5rem;
